// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smooch-action-collect-message-response Everthing is successful Web Walkthrough passes in the correct arguments to SmoochCore 1`] = `
Array [
  Array [
    Object {
      "keyId": "id",
      "scope": "app",
      "secret": "secret",
      "serviceUrl": "mock-amooch-api-url",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful Web Walkthrough passes in the correct arguments to secretClient.getSecretValue() 1`] = `
Array [
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-cx",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful Web Walkthrough passes in the correct arguments to smooch.appUsers.sendMessage() 1`] = `
Array [
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "message": Object {
        "blockChatInput": false,
        "fields": Array [
          Object {
            "label": "message",
            "name": "collect-message",
            "type": "text",
          },
        ],
        "metadata": Object {
          "actionId": "5e31c81640a22c000f5d7f28",
          "from": "from",
          "interactionId": "66d83870-30df-4a3b-8801-59edff162070",
          "subId": "5e31c81640a22c000f5d7f55",
          "type": "system",
        },
        "role": "appMaker",
        "type": "form",
      },
      "userId": "5e31c81640a22c000f5d7f90",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful Whatsapp Walkthrough passes in the correct arguments to SmoochCore 1`] = `
Array [
  Array [
    Object {
      "keyId": "id",
      "scope": "app",
      "secret": "secret",
      "serviceUrl": "mock-amooch-api-url",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful Whatsapp Walkthrough passes in the correct arguments to secretClient.getSecretValue() 1`] = `
Array [
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-cx",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful Whatsapp Walkthrough passes in the correct arguments to smooch.appUsers.sendMessage() 1`] = `
Array [
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "message": Object {
        "metadata": Object {
          "from": "from",
          "interactionId": "66d83870-30df-4a3b-8801-59edff162070",
          "type": "system",
        },
        "role": "appMaker",
        "text": "message",
        "type": "text",
      },
      "userId": "5e31c81640a22c000f5d7f90",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful when action already exists in pending interaction - multiple collect actions 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeValues": Object {
        ":c": Array [
          Object {
            "actionId": "5e31c81640a22c000f5d7f22",
            "subId": "5e31c81640a22c000f5d7f52",
          },
          Object {
            "actionId": "5e31c81640a22c000f5d7f28",
            "subId": "5e31c81640a22c000f5d7f55",
          },
        ],
      },
      "Key": Object {
        "SmoochUserId": "5e31c81640a22c000f5d7f90",
      },
      "ReturnValues": "UPDATED_NEW",
      "TableName": "us-east-1-dev-smooch-interactions",
      "UpdateExpression": "set CollectActions = :c",
    },
  ],
]
`;

exports[`smooch-action-collect-message-response Everthing is successful when action already exists in pending interaction - multiple collect actions 2`] = `
Array [
  Object {
    "appId": "5e31c81640a22c000f5d7f28",
    "message": Object {
      "blockChatInput": false,
      "fields": Array [
        Object {
          "label": "message",
          "name": "collect-message",
          "type": "text",
        },
      ],
      "metadata": Object {
        "actionId": "5e31c81640a22c000f5d7f28",
        "from": "from",
        "interactionId": "66d83870-30df-4a3b-8801-59edff162070",
        "subId": "5e31c81640a22c000f5d7f55",
        "type": "system",
      },
      "role": "appMaker",
      "type": "form",
    },
    "userId": "5e31c81640a22c000f5d7f90",
  },
]
`;

exports[`smooch-action-collect-message-response Everthing is successful when action already exists in pending interaction - whatsapp 1`] = `
Array [
  Object {
    "appId": "5e31c81640a22c000f5d7f28",
    "message": Object {
      "metadata": Object {
        "from": "from",
        "interactionId": "66d83870-30df-4a3b-8801-59edff162070",
        "type": "system",
      },
      "role": "appMaker",
      "text": "message",
      "type": "text",
    },
    "userId": "5e31c81640a22c000f5d7f90",
  },
]
`;

exports[`smooch-action-collect-message-response Everthing is successful when the message contains more than 128 characters 1`] = `"messagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessagemessa..."`;

exports[`smooch-action-collect-message-response throws an error when there is a problem retrieving digital channels credentials (thrown by SmoochCore) 1`] = `"Error retrieving digital channels credentials"`;

exports[`smooch-action-collect-message-response throws an error when there is a problem retrieving digital channels credentials 1`] = `"Error retrieving digital channels credentials"`;

exports[`smooch-action-collect-message-response throws an error when there is a problem sending collect-message 1`] = `"Error sending collect-message"`;

exports[`smooch-action-collect-message-response throws an error when there is a problem sending whatsapp collect-message 1`] = `"Error sending Whatsapp collect message"`;

exports[`smooch-action-collect-message-response throws an error when there is a problem updating collectActions 1`] = `"An error ocurred updating collectActions"`;

exports[`throws an error when there is a problem getting collectActions 1`] = `"Failed to get smooch interaction record"`;
